# igsn_scan

./: pyproject.toml
igsn_oai_scan/: README.adoc  scrapy.cfg
igsn_oai_scan/dbs/: default.db
igsn_oai_scan/igsn_oai_scan/: items.py  middlewares.py  pipelines.py  settings.py
igsn_oai_scan/igsn_oai_scan/spiders/: doidb.py  igsnoaidb.py  oaipmh.py
ldscan/: ldscan.py  ldsitemapspider.py
ldscanner/: scrapy.cfg
ldscanner/ldscanner/: items.py  middlewares.py  pipelines.py  settings.py
ldscanner/ldscanner/spiders/: jsonldspider.py
